--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,11 @@
 	//		navigator.serviceWorker.register("./sw.js");
 	//	}
     </script>
-    
-	<link rel="stylesheet" href="global.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="global.css">
 	<link rel="stylesheet" href="build/bundle.css">
 
 	<script defer src="build/bundle.js"></script>
