--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 
    <title>Susie</title>
-    <meta name="description" content="Guess the susie.">
+    <meta name="description" content="Guess Susie's word.">
 
     <!-- FB Meta Tags -->
-    <meta property="og:url" content="https://rbrignall.github.io/susie">
+    <meta property="og:url" content="https://susie.rbrignall.org.uk">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Susie">
-    <meta property="og:description" content="Guess the susie.">
-    <meta property="og:image" content="https:/rbrignall.github.io/susie/img/susie_og_1200x630.png">
+    <meta property="og:description" content="Guess Susie's word.">
+    <meta property="og:image" content="https://susie.rbrignall.org.uk/img/susie_og_1200x630.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="rbrignall.github.io">
+    <meta property="twitter:domain" content="susie.rbrignall.org.uk">
 
     <meta name="theme-color" content="#6aaa64" />
     <link rel="manifest" href="manifest.json" />
