--- a/public/index.html
+++ b/public/index.html
@@ -14,17 +14,20 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Susie">
     <meta property="og:description" content="Guess Susie's word.">
-    <meta property="og:image" content="https://susie.rbrignall.org.uk/img/susie_og_1200x630.png">
+    <meta property="og:image" content="https://susie.rbrignall.org.uk/susie_og_1200x630.png">
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="susie.rbrignall.org.uk">
 
     <meta name="theme-color" content="#6aaa64" />
-    <link rel="manifest" href="manifest.json" />
-    <link href="./img/susie_logo_32x32.png" rel="icon shortcut" sizes="3232" />
-    <link href="./img/susie_logo_192x192.png" rel="apple-touch-icon" />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/site.webmanifest">    
+    
 	<script>
         // PWA Service worker 
 	//	if ("serviceWorker" in navigator) {
