--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G2D495VXCC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-G2D495VXCC');
+    </script>
+    
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
 	<link rel="stylesheet" href="build/bundle.css">
