--- a/public/index.html
+++ b/public/index.html
@@ -30,9 +30,9 @@
     
 	<script>
         // PWA Service worker 
-	//	if ("serviceWorker" in navigator) {
-	//		navigator.serviceWorker.register("./sw.js");
-	//	}
+		if ("serviceWorker" in navigator) {
+			navigator.serviceWorker.register("./sw.js");
+		}
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
