--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://susie.rbrignall.org.uk">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Susie">
-    <meta property="og:description" content="Guess Susie's word.">
+    <meta property="og:description" content="Can you guess Susie's word? Susie is a daily word guessing game that requires logic and wordsmithery.">
     <meta property="og:image" content="https://susie.rbrignall.org.uk/susie_og_1200x630.png">
 
     <!-- Twitter Meta Tags -->
