--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,8 @@
 
 <body>
     
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2276519097140776"
+     crossorigin="anonymous"></script>
 </body>
 
 </html>
