Add adsense tag

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
 
         gtag('config', 'G-G2D495VXCC');
     </script>
+    <meta name="google-adsense-account" content="ca-pub-2276519097140776">
     
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
